--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "DELAF",
         "slug": "app",
-        "version": "1.8.0",
+        "version": "1.11.0",
         "orientation": "portrait",
         "icon": "./assets/DELAF_portada.png",
         "scheme": "myapp",
@@ -25,7 +25,7 @@
             }
         },
         "android": {
-            "versionCode": 8,
+            "versionCode": 11,
             "softwareKeyboardLayoutMode": "pan",
             "intentFilters": [
                 {
@@ -51,7 +51,15 @@
             "output": "static",
             "favicon": "./assets/images/favicon.png"
         },
-        "plugins": ["expo-router"],
+        "plugins": [
+            "expo-router",
+            [
+                "expo-font",
+                {
+                    "fonts": ["./assets/fonts/IBMPlexSansJP_400Regular.ttf"]
+                }
+            ]
+        ],
         "experiments": {
             "typedRoutes": true
         },
