--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "DELAF",
         "slug": "app",
-        "version": "1.11.0",
+        "version": "1.11.1",
         "orientation": "portrait",
         "icon": "./assets/DELAF_portada.png",
         "scheme": "myapp",
@@ -25,7 +25,7 @@
             }
         },
         "android": {
-            "versionCode": 11,
+            "versionCode": 12,
             "softwareKeyboardLayoutMode": "pan",
             "intentFilters": [
                 {
@@ -44,7 +44,12 @@
                 "foregroundImage": "./assets/DELAF_portada.png",
                 "backgroundColor": "#1a181d"
             },
-            "package": "com.hicso.delaf"
+            "package": "com.hicso.delaf",
+            "splash": {
+                "backgroundColor": "#1a181d",
+                "resizeMode": "contain",
+                "image": "./assets/DELAF_portada.png"
+            }
         },
         "web": {
             "bundler": "metro",
