Fixing android.permission.READ_MEDIA_IMAGES

--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
                 "backgroundColor": "#1a181d",
                 "resizeMode": "contain",
                 "image": "./assets/DELAF_portada.png"
-            }
+            },
+            "blockedPermissions": ["android.permission.READ_MEDIA_IMAGES"]
         },
         "web": {
             "bundler": "metro",
