--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "DELAF",
         "slug": "app",
-        "version": "1.11.11",
+        "version": "1.11.12",
         "orientation": "portrait",
         "icon": "./assets/DELAF_portada.png",
         "scheme": "myapp",
@@ -25,7 +25,7 @@
             }
         },
         "android": {
-            "versionCode": 26,
+            "versionCode": 28,
             "softwareKeyboardLayoutMode": "pan",
             "intentFilters": [
                 {
@@ -50,7 +50,7 @@
                 "resizeMode": "contain",
                 "image": "./assets/DELAF_portada.png"
             },
-            "blockedPermissions": ["android.permission.READ_MEDIA_IMAGES"]
+            "permissions": ["android.permission.INTERNET"]
         },
         "web": {
             "bundler": "metro",
