--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "DELAF",
         "slug": "app",
-        "version": "1.11.12",
+        "version": "1.11.14",
         "orientation": "portrait",
         "icon": "./assets/DELAF_portada.png",
         "scheme": "myapp",
@@ -25,7 +25,7 @@
             }
         },
         "android": {
-            "versionCode": 28,
+            "versionCode": 30,
             "softwareKeyboardLayoutMode": "pan",
             "intentFilters": [
                 {
@@ -50,6 +50,7 @@
                 "resizeMode": "contain",
                 "image": "./assets/DELAF_portada.png"
             },
+            "blockedPermissions": ["android.permission.READ_MEDIA_IMAGES"],
             "permissions": ["android.permission.INTERNET"]
         },
         "web": {
